# mentoring

./: .gitignore  CMakeLists.txt  basic_answers.md  oop_answers.md  stl_answers.md  tasks.md
dynamic_lib/: CMakeLists.txt  a.out  main.cpp
dynamic_lib/lib/: CMakeLists.txt  sum.h
include/: interface.h
math_lib/: CMakeLists.txt  math.h
src/: interface.cpp
static_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
static_lib/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  sum.cpp  sum.h
tests/: test_calculator.cpp
tt_1/: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
tt_1/include/: interface.h
tt_1/src/: interface.cpp
tt_2/: .clang-format  .clang-tidy  main.cpp
tt_2/tools/: logger.h
